<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/mobile_navigation"
    app:startDestination="@+id/nav_home">

    <fragment
        android:id="@+id/nav_home"
        android:name="com.example.nss_iitpatna.ui.home.HomeFragment"
        android:label="@string/menu_home"
        tools:layout="@layout/fragment_home" />
    <fragment
        android:id="@+id/nav_gallery"
        android:name="com.example.nss_iitpatna.ui.gallery.GalleryFragment"
        android:label="@string/menu_gallery"
        tools:layout="@layout/fragment_gallery" />
    <fragment
        android:id="@+id/nav_about_us"
        android:name="com.example.nss_iitpatna.ui.aboutUs.AboutUsFragment"
        android:label="@string/menu_about_us"
        tools:layout="@layout/fragment_about_us" />
    <fragment
        android:id="@+id/nav_events"
        android:name="com.example.nss_iitpatna.ui.events.EventsFragment"
        android:label="@string/menu_events"
        tools:layout="@layout/fragment_events" />
    <fragment
        android:id="@+id/nav_sign_in"
        android:name="com.example.nss_iitpatna.ui.login.SignInFragment"
        android:label="@string/menu_sign_in"
        tools:layout="@layout/fragment_sign_in">
        <action
            android:id="@+id/action_nav_sign_in_to_nav_sign_up"
            app:destination="@id/nav_sign_up" />
    </fragment>
    <fragment
        android:id="@+id/nav_sign_up"
        android:name="com.example.nss_iitpatna.ui.login.SignUpFragment"
        android:label="@string/menu_sign_up"
        tools:layout="@layout/fragment_sign_up" >
        <action
            android:id="@+id/action_nav_sign_up_to_nav_sign_in"
            app:destination="@id/nav_sign_in" />
    </fragment>
    <fragment
        android:id="@+id/nav_team"
        android:name="com.example.nss_iitpatna.ui.team.TeamFragment"
        android:label="@string/menu_team"
        tools:layout="@layout/fragment_team" />
    <fragment
        android:id="@+id/nav_think_thank"
        android:name="com.example.nss_iitpatna.ui.thinkThank.ThinkThankFragment"
        android:label="@string/menu_think_thank"
        tools:layout="@layout/fragment_think_thank" />
    <activity
        android:id="@+id/nav_units"
        android:name="com.example.nss_iitpatna.ui.units.UnitsActivity"
        android:label="@string/menu_units"
        tools:layout="@layout/activity_units" />

</navigation>